--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -22,6 +22,10 @@ jobs:
     - name: Installing tar and unew via binary
       run: |
         sudo apt install unzip -y
+        wget https://github.com/rix4uni/unew/releases/download/v0.0.4/unew-linux-amd64-0.0.5.tgz
+        tar -xvzf unew-linux-amd64-0.0.5.tgz
+        mv unew /usr/local/bin/unew
+        rm -rf unew-linux-amd64-0.0.5.tgz
 
     - name: Running scope_moniter.sh
       run: |
